2007-01-29  Martin Hunt  <hunt@redhat.com>

	* procfs.c: Count allocated IO memory.
	* symbols.c: Use _stp_kmalloc() and _stp_kzalloc().
	* transport.c: Count allocated IO memory.
	
2007-01-09  Martin Hunt  <hunt@redhat.com>

	* symbols.c (_stp_del_module): Fix so memory allocated
	for module 0 (kernel) is freed.
	(_stp_free_modules): No need to lock module list.

2006-12-20  Martin Hunt  <hunt@redhat.com>

	* transport.c: Fixes to use the new 2.6.20 workqueue API.

2006-11-15  Martin Hunt  <hunt@redhat.com>

	* procfs.c (_stp_proc_write_cmd): For STP_SYMBOLS, 
	type field is a long to preserve alignment.
	Use STP_ALLOC_FLAGS.

	* symbols.c: Use STP_ALLOC_FLAGS.
	
2006-11-09  Martin Hunt  <hunt@redhat.com>

	* transport_msgs.h: Change all ints to int32_t. Prefix
	all struct names with "_stp".
	* transport.c: Use new struct names.
	(_stp_handle_start): Send pointer size and endianess.
	* procfs.c: Use new struct names.

2006-11-02  Martin Hunt  <hunt@redhat.com>
	* symbols.c (_stp_do_module): Fix error message.

2006-11-02  Martin Hunt  <hunt@redhat.com>	

	* symbols.c: New file. Get the STP_SYMBOLS and STP_MODULE
	messages, allocate memory and store the data.

	* procfs.c (_stp_proc_write_cmd): When STP_SYMBOLS or STP_MODULE
	request is received, call the appropriate functions.

	* transport.c (_stp_handle_start): If necessary, ask staprun for 
	symbols and modules.
	(_stp_cleanup_and_exit): Unregister module notifier.
	(_stp_transport_close): Unregister module notifier and free module
	memory.
	* transport_msgs.h (enum): Add STP_MODULE and STP_SYMBOLS.

2006-09-26  David Smith  <dsmith@redhat.com>

	* transport.c: Changed 'stpd' references to 'staprun'.
	* transport.txt: Ditto.

2006-09-26  Martin Hunt  <hunt@redhat.com>

	* transport.c (_stp_handle_start): Don't initialize timers here.
	(_stp_transport_init): Initialize timers here. 
	(_stp_cleanup_and_exit): Don't kill timers or free print buffers here.